--- a/NN-Optimization/Binary-Classification.ipynb
+++ b/NN-Optimization/Binary-Classification.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author: Maryam Khanahmadi - Computational physicist - Posdtocs at Chalmers University of thecnology\n",
+    "## Author: Maryam Khanahmadi - Computational physicist - Postdocs at Chalmers University of thecnology\n",
     "## Email: m.khanahmadi94@gmail.com\n",
     "\n",
-    "#### This code explores differnet Optimization methods on the functionality of the feed-forward neural netwrok perfoming classification task.\n",
+    "#### This code explores different Optimization methods on the functionality of the feed-forward neural network performing classification task.\n",
     "#### The optimization methods include : - Hyper parameter optimization\n",
-    "####                                    - Doroup out methods\n",
-    "####                                    - Applying multimple optimizer to compare the results together."
+    "####                                    - Drop out methods\n",
+    "####                                    - Applying multiple optimizers to compare the results together."
    ]
   },
   {
